@@ -1,5 +1,8 @@
 2007-08-26  Francois Dumont  <dums@users.sourceforge.net>
 
+	* stlport/stl/config/user_config.h, host.h: Moved the administrative
+	_STLP_USE_DEFAULT_FILE_OFFSET macro from user_config.h to host.h.
+
 	* stlport/stl/config/_gcc.h: Under MinGW we now use C symbols in
 	global namespace. Tests with 4.2.1 gcc version shows that C symbols
 	are not necessarily put in std namespace.
